k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hydrus-prod
  labels:
    name: hydrus-prod
    project: hydrus-devops-platform
    managed-by: kubectl
